# Tali

./: .gitignore  README.md  TALI_IMPROVEMENTS.md  pyproject.toml  quickstart.sh  tali-hardening.patch
src/tali/: __init__.py  a2a.py  a2a_bus.py  a2a_protocol.py  a2a_registry.py  agent_identity.py  agent_loop.py  approvals.py  classifier.py  cli.py  cli_format.py  config.py  consolidation.py  db.py  embeddings.py  episode.py  guardrails.py  hooks.py  idle.py  idle_jobs.py  knowledge_sources.py  llm.py  locks.py  memory_ingest.py  memory_manager.py  model_catalog.py  models.py  patches.py  preferences.py  prompting.py  prompts.py  questions.py  retrieval.py  run_logs.py  self_care.py  self_reflection.py  sleep.py  snapshots.py  task_runner.py  tasking.py  (+5 more)
src/tali/hooks/: __init__.py  contradiction_resolver.py  core.py  patch_review.py  task_verification.py
src/tali/tools/: __init__.py  policy.py  protocol.py  registry.py  runner.py
tests/: test_a2a.py  test_a2a_registry.py  test_agent_identity.py  test_approvals.py  test_cli_spawn.py  test_contradiction_resolution.py  test_db_connections.py  test_idle_autonomy.py  test_idle_hooks_questions.py  test_llm.py  test_patch_review.py  test_patches.py  test_run_logs.py  test_sleep_policy.py  test_task_runner.py  test_task_verification_hook.py  test_tasking.py  test_tool_policy.py  test_web_ui.py  test_working_memory.py  test_worktrees.py
