[project]
name = "tali"
version = "0.1.0"
description = "Persistent, trustworthy, non-self-poisoning agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12.3",
  "hnswlib>=0.8.0",
  "httpx>=0.27.0",
]

[project.scripts]
agent = "tali.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"tali" = ["py.typed"]
